--- a/themes/basic-bold/components/pagination.scss
+++ b/themes/basic-bold/components/pagination.scss
@@ -1,9 +1,21 @@
 /* Pagination */
 
 :root {
-  --pagination-border-width: 0;
-  --pagination-link-active-background-color: var(--basic-bold-accent-color-1);
+  --pagination-link-border-radius: 0;
+  --pagination-link-border-width: 0 0 2px 0;
+  --pagination-link-border-color: transparent;
+
+  /* Active */
+  --pagination-link-active-background-color: transparent;
+  --pagination-link-active-border-width: 0 0 2px 0;
+  --pagination-link-active-border-color: #6b7b6a;
 
   /* Hover */
-  --pagination-link-hover-background-color: var(--basic-bold-accent-color-1);
+  --pagination-link-hover-background-color: transparent;
+  --pagination-link-hover-border-width: var(
+    --pagination-link-active-border-width
+  );
+  --pagination-link-hover-border-color: var(
+    --pagination-link-active-border-color
+  );
 }
